--- a/index.html
+++ b/index.html
@@ -1,36 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Comment Form</title>
+  <title>Web Forms</title>
 </head>
 <body>
-<center>
-  <form>
-    <fieldset style="width: fit-content">
-      <font size="4">
-        <p><b>What about us do you want to comment on?</b></p>
-        <select size="1">
-          <option>Web Site</option>
-          <option>COMPANY</option>
-          <option>PRODUCTS</option>
-          <option>STORE</option>
-          <option>EMPLOYEE</option>
-          <option>OTHER</option>
-        </select>
-        , Other: <input type="text" size="40">
-        <br><br>
-
-        <p><b>Enter your comments in the space provided below:</b></p>
-        <textarea rows="8" cols="50"></textarea>
-        <br><br>
-
-        <p><b>Tell us how to get in touch with you:</b></p>
-        <b>Name</b> <input type="text" size="40"><br><br>
-        <b>Email</b> <input type="text" size="40">
-      </font>
-    </fieldset>
-  </form>
-</center>
+<h1>Web Forms</h1>
+<p><a href="comment-form.html">Comment Form</a></p>
+<p><a href="registration-form.html">Student Registration Form</a></p>
 </body>
 </html>
